...

  static const _alwaysVisibleDestinations = [
    _Destination(
      route: AppRoutes.credit,
      icon: Icons.account_balance_wallet_outlined,
      selectedIcon: Icons.account_balance_wallet,
      label: '외상 장부',
    ),
    _Destination(
      route: AppRoutes.salesHistory,
      icon: Icons.bar_chart_outlined,
      selectedIcon: Icons.bar_chart,
      label: '매출 내역',
    ),
    _Destination(
      route: AppRoutes.settings,
      icon: Icons.settings_outlined,
      selectedIcon: Icons.settings,
      label: '설정',
...
